--- a/index.html
+++ b/index.html
@@ -451,12 +451,70 @@
 									<input type="text" id="subject" />
 									<label for="message">Message</label>
 									<input type="text" id="message" />
+
+									<button class="rounded">Send Message</button>
 								</form>
 							</div>
-							<div id="address-container"></div>
+							<div id="address-container">
+								<label>Address</label>
+								<address>
+									20377 Evergreen Terrace Mountain View, California, USA
+								</address>
+								<label>Phone</label>
+								<a href="#">232-232-7850</a>
+								<label>Email Address</label>
+								<a href="#">ourestate@stated.com</a>
+							</div>
 						</div>
 					</div>
 				</section>
+
+				<!-- Footer -->
+				<footer>
+					<div class="flex-container">
+						<div class="footer-about">
+							<h5>About Stated</h5>
+							<p>
+								Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit
+								quis officia ducimus atque deserunt unde beatae quas, tempore
+								libero delectus nisi voluptatum sapiente error sed consequatur?
+								Reprehenderit accusantium amet possimus.
+							</p>
+						</div>
+						<div class="footer-quick-links">
+							<h5>Quick Links</h5>
+							<ul>
+								<li><a href="#">About Us</a></li>
+								<li><a href="#">Services</a></li>
+								<li><a href="#">Testimonials</a></li>
+								<li><a href="#">Contact Us</a></li>
+							</ul>
+						</div>
+						<div class="footer-subscribe">
+							<h5>Subscribe to our Newsletter</h5>
+
+							<div id="subscribe-container">
+								<input type="text" placeholder="Enter Email" />
+								<button class="right-rounded">Send</button>
+							</div>
+
+							<h5 class="follow-us">Follow Us</h5>
+							<ul>
+								<li>
+									<a href="#"><span class="fab fa-facebook-f"></span></a>
+									<a href="#"><span class="fab fa-twitter"></span></a>
+									<a href="#"><span class="fab fa-instagram"></span></a>
+									<a href="#"><span class="fab fa-linkdein-in"></span></a>
+								</li>
+							</ul>
+						</div>
+					</div>
+					<small>
+						Copyright &copy; 2021 All rights reserved | This template is made
+						with <span class="fa fa-heart"></span> by
+						<a href="https://github.com/shubhamverma22">Shubham</a>
+					</small>
+				</footer>
 			</div>
 		</body>
 	</html>
